# template-fastapi

./: .env.example  Dockerfile  LICENSE  alembic.ini  docker-compose.yml  makefile  pyproject.toml
alembic/: env.py
app/: __init__.py
app/configs/: database.py  settings.py
app/routes/: __init__.py  health.py
tests/configs/: database_test.py
